java8변경으로 인한 List.of변경